2009-04-11  Matthias Clasen  <mclasen@redhat.com>

	* display-capplet.glade: Make all mnemonics work. (#578572)

2009-03-30  Federico Mena Quintero  <federico@novell.com>

	* xrandr-capplet.c (ensure_current_configuration_is_saved): Save
	monitors.xml with the current configuration before changing it, so
	that we'll have something to go back to even on a first-time login
	(when monitors.xml doesn't exist).

2009-03-20  Federico Mena Quintero  <federico@novell.com>

	* xrandr-capplet.c (begin_version2_apply_configuration): There is no need
	to check the result of dbus_g_proxy_new_for_name(); it can't fail.
	(begin_version1_apply_configuration): Likewise.
	(apply_configuration_returned_cb): Fix a potential leak of the
	proxy in the error case.
	(apply): Simplify a bit, now that the initial call to
	begin_version2_apply_configuration() can't fail.

2009-03-19  Federico Mena Quintero  <federico@novell.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=576006 - The
	confirmation dialog from the RANDR plugin can appear behind the
	window from gnome-display-properties.  This also depends on a
	change to gnome-settings-daemon, although it will work with older
	g-s-d as well.
	
	* xrandr-capplet.c (apply): Call the new DBus API for
	ApplyConfiguration in org.gnome.SettingsDaemon.XRANDR_2, or the
	old one if that fails.
	(begin_version2_apply_configuration): New helper function; calls
	the new API.
	(begin_version1_apply_configuration): New helper function; calls
	the old API.
	(apply_configuration_returned_cb): If the new API is not
	available, try the old one.  This makes us compatible with older
	versions of gnome-settings-daemon.
	(error_message): Allow a NULL secondary_text.

2009-03-11  Federico Mena Quintero  <federico@novell.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=574865 - Crash when
	refreshing the RANDR configuration.

	* xrandr-capplet.c (select_current_output_from_dialog_position):
	Always set app->current_output; otherwise we could be left with a